Fix for #447 Fix comparison with content-Types, Refactorings